Noise Texture no longer generates random value Once Coordinates beyond 10^5, this limit is higher for other textures #121969
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#121969
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.61
Blender Version
Broken: version: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash:
e1743a0317bc
Short description of error
dragging the value shown in the red box, and try a different exponent in yellow box to see how color changes from noise.
It's probably a known limitation, but I want to confirm if this is expected.
Other textures are having a much higher limit
Hi, can confirm as well though this might be expected. Was looking at the code in
node_shader_tex_noise.cc/noise.cc
but didn't quite understand it. so forwarding to devs for confirmation :/@brecht @Hoshinova any idea?
It's indeed a known limitation due to numerical precision.
Brecht is right, but I'd like to add some explanations as to why it happens and why it happens much earlier for Perlin noise compared to the other noise textures.
One of the properties of Perlin noise is that it always evaluates to 0.0 when not normalized (or 0.5 when normalized) when the input consists of only whole integers in all vector components.
Blender's Perlin noise implementation uses single precision
float
s with a machine epsilon of 1.19e-07 meaning that for numbers that are greater than 1/(1.19e-07) = 8.40e6 there mantissa doesn't have any bits left to store a rational part of the number, effectively meaning that any number greater than 8.40e6 is a whole integer as far as Blender is concerned.Therefore when evaluating Perlin noise for any coordinates greater than that it always result to 0.0 (or 0.5 when normalized).
Actually precision issues are already visible before reaching 8.40e6:
As can be seen the result gets more quantized the greater the input vector becomes.
This happens to the other noise types like e.g. White Noise or Voronoi as well but with the key difference that unlike Perlin noise they don't just always evaluate to 0.0 making the effect less obvious.
Thanks! this is really the explanation I was looking for!